--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="share_app">Поделиться приложением</string>
     <string name="write_to_support">Написать в поддержку</string>
     <string name="user_aggrement">Пользовательское соглашение</string>
+    <string name="open_messenger_error">Не удалось открыть мессенджер</string>
 </resources>
