--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="write_to_support">Написать в поддержку</string>
     <string name="user_aggrement">Пользовательское соглашение</string>
     <string name="open_messenger_error">Не удалось открыть мессенджер</string>
+    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
 </resources>
