--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="search_404">Ничего не нашлось</string>
     <string name="search_500_1">Проблемы со связью</string>
     <string name="search_500_2">Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="update">Обновить</string>
 </resources>
