--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="search_500_1">Проблемы со связью</string>
     <string name="search_500_2">Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
+    <string name="recent_tracks_title">Вы искали</string>
+    <string name="clear_history">Очистить историю</string>
 </resources>
