--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,23 @@
     <string name="new_playlist">Новый плейлист</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <plurals name="n_tracks">
+        <item quantity="one">%d трек</item>
+        <item quantity="few">%d трека</item>
+        <item quantity="many">%d трека</item>
+        <item quantity="other">%d треков</item>
+    </plurals>
+
+    <string name="playlist_name">Название*</string>
+    <string name="playlist_description">Описание</string>
+
+    <string name="finish_create_playlist_title">Завершить создание плейлиста?</string>
+    <string name="finish_create_playlist_message">Все несохраненные данные будут потеряны</string>
+    <string name="finish_create_playlist_yes">Завершить</string>
+    <string name="finish_create_playlist_no">Отмена</string>
+
+    <string name="playlist_created">Плейлист %1$s создан</string>
+    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
+    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
 </resources>
